--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
     /* VARIÁVEIS DA FONTE */
   --font-family: 'Poppins', sans-serif;
@@ -28,5 +34,8 @@
       /* SEMANTIC */
     --semantic-error:#DC2626;
 
+}
 
+body {
+  overflow: hidden;
 }
