--- a/styles/global.css
+++ b/styles/global.css
@@ -25,7 +25,7 @@
       /* SURFACE */
     --surface-primary:#FFFFFF;
     --surface-secondary:#FEE7D6;
-    --surface-disabled:#E7E5E4;
+    --surface-disabled:#b8b4b1;
 
       /* STROKE */
     --stroke-default:#D6D3D1;
@@ -51,4 +51,16 @@ h1, h2 {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex-2{
+  flex: 2;
 }
